@@ -140,6 +140,18 @@ public class SSDPResponse extends BasicHttpResponse implements SSDPMessage {
     }
 
     /**
+     * {@link Number} fluent header setter.
+     *
+     * @param   name            The header name.
+     * @param   value           The header value.
+     *
+     * @return  {@link.this}
+     */
+    public SSDPResponse header(String name, Number value) {
+        return header(name, Number::toString, value);
+    }
+
+    /**
      * {@link URI} fluent header setter.
      *
      * @param   name            The header name.
